--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
 			</nav>
 		</header>
 		<!-- 展示区块 -->
-		<section class="z-show" style="display: none;">
+		<section class="z-show" >
 			<!-- 轮播图 -->
 			<section class="z-carousel">
 				<ul class="z-imgs">
@@ -102,9 +102,9 @@
 			</section>
 			</section>
 		<!-- 播放区块 -->
-		<section class="z-play">
+		<!-- <section class="z-play">
 			<iframe src="https://jx.618g.com/?url=http://v.youku.com/v_show/id_XMzgwODU2ODE0MA==.html?spm=a2htp.20023922.97.1~3~P!2~A" class="z-play-box"></iframe>
-		</section>
+		</section> -->
 	</div>
 </body>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
