--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
 	</div>
 </body>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
-<script src="http://cdn.staticfile.org/artTemplate.js/3.0.1/template.js" crossorigin="anonymous"></script>
+<script src="https://cdn.staticfile.org/artTemplate.js/3.0.1/template.js" crossorigin="anonymous"></script>
 <!-- <script id="hot_word" type="text/html">
 	{{each s as word i}}
 		<li item="{{i+1}}"><a href="javascript:;">{{word.w}}</a></li>
