--- a/index.html
+++ b/index.html
@@ -89,11 +89,11 @@
 			<!-- 轮播图 -->
 			<section class="z-carousel">
 				<ul class="z-imgs">
-					<li><img src="/images/c1.jpg" alt=""></li>
-					<li><img src="/images/c2.jpg" alt=""></li>
-					<li class="hidden"><img src="/images/c3.jpg" alt=""></li>
-					<li class="hidden"><img src="/images/c4.jpg" alt=""></li>
-					<li class="hidden"><img src="/images/c5.jpg" alt=""></li>
+					<li><img src="images/c1.jpg" alt=""></li>
+					<li><img src="images/c2.jpg" alt=""></li>
+					<li class="hidden"><img src="images/c3.jpg" alt=""></li>
+					<li class="hidden"><img src="images/c4.jpg" alt=""></li>
+					<li class="hidden"><img src="images/c5.jpg" alt=""></li>
 				</ul>
 				<div class="z-circle"></div>
 			</section>
