--- a/index.html
+++ b/index.html
@@ -105,7 +105,12 @@
 			</section>
 		<!-- 播放区块 -->
 		<section class="z-play">
-			<iframe src="https://jx.618g.com/?url=http://v.youku.com/v_show/id_XMzgwODU2ODE0MA==.html?spm=a2htp.20023922.97.1~3~P!2~A" class="z-play-box"></iframe>
+			<div class="z-play-box">
+				<iframe src="https://jx.618g.com/?url=http://v.youku.com/v_show/id_XMzgwODU2ODE0MA==.html?spm=a2htp.20023922.97.1~3~P!2~A" class="z-video"></iframe>
+			</div>
+			<div class="z-play-full">
+				<iframe src="https://jx.618g.com/?url=http://v.youku.com/v_show/id_XMzgwODU2ODE0MA==.html?spm=a2htp.20023922.97.1~3~P!2~A" class="z-video"></iframe>
+			</div>
 		</section>
 	</div>
 </body>
