--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
 			</nav>
 		</header>
 		<!-- 展示区块 -->
-		<section class="z-show" style="display: none;">
+		<section class="z-show">
 			<!-- 轮播图 -->
 			<section class="z-carousel">
 				<ul class="z-imgs">
@@ -104,12 +104,169 @@
 			</section>
 			</section>
 		<!-- 播放区块 -->
-		<section class="z-play">
+		<section class="z-play hidden">
 			<div class="z-play-box">
-				<iframe src="https://jx.618g.com/?url=http://v.youku.com/v_show/id_XMzgwODU2ODE0MA==.html?spm=a2htp.20023922.97.1~3~P!2~A" class="z-video"></iframe>
+				<iframe class="z-video"></iframe>
 			</div>
-			<div class="z-play-full">
-				<iframe src="https://jx.618g.com/?url=http://v.youku.com/v_show/id_XMzgwODU2ODE0MA==.html?spm=a2htp.20023922.97.1~3~P!2~A" class="z-video"></iframe>
+			<div class="z-episodes">
+				<h2>选集<a href="javascript:;" class="z-episodes-choice">快速选集</a></h2>
+				<div class="z-episodes-list">
+					<!-- <ul>
+						<li><a href="javascript:;">1</a></li>
+						<li><a href="javascript:;">3</a></li>
+						<li><a href="javascript:;">4</a></li>
+						<li><a href="javascript:;">5</a></li>
+						<li><a href="javascript:;">6</a></li>
+						<li><a href="javascript:;">7</a></li>
+						<li><a href="javascript:;">8</a></li>
+						<li><a href="javascript:;">9</a></li>
+					</ul> -->
+				</div>
+			</div>
+			<div class="z-abstract">
+				<!-- <h2>分集剧情</h2>
+				<div class="z-abstract-list">
+					<ul>
+						<li>
+							<img src="https://vthumb.ykimg.com/054102015B5B56480000015D0E04DF0E" alt="">
+							<div class="abstract">
+								<div class="header">
+									<h3 class="overflow-ellipsis">武动乾坤之英雄出少年 02</h3>
+									<span>3.4亿次播放</span>
+								</div>
+								<p>
+									林动是林氏宗族林啸的儿子，因林啸病重，林动专门出来打拳为父亲筹钱买药。不料林动在竞技场连续赢得比赛，引起了雷家二少爷雷厉的关注。远古时期被符祖封印的异魔冲破封印，遍寻散落世间的祖符，想要重启位面之门。为了阻止异魔，道宗宗主应玹子、九天太清宫宫主沈清和元门执事长老穆芊芊齐聚商议对策。绫清竹擅自前往青阳镇除魔，应欢欢得知后也追随前往。林动得罪雷家的事被家族得知，族长林穆严厉斥责了他，但林动坚决不认错。
+								</p>
+							</div>
+						</li>
+					</ul>
+				</div> -->
+			</div>
+<!-- 			<div class="z-related">
+				<h2>相关周边</h2>
+				<div class="z-related-list">
+					<ul>
+						<li>
+							
+						</li>
+					</ul>
+				</div>
+			</div> -->
+			<div class="z-comment">
+				<h2>网络评论</h2>
+				<div class="z-comment-list">
+					<ul>
+						<li>
+							<img src="https://static.youku.com/user/img/avatar/50/24.jpg" alt="">
+							<div class="content-box">
+								<h4 class="overflow-ellipsis">盘丝瑶瑶</h4>
+								<p class="comment-time">2018年05月10日</p>
+								<p class="comment-content">我决定从第一集再好好看一遍求点赞看主页pk赛车飙车</p>
+							</div>
+						</li>
+						<li>
+							<img src="https://static.youku.com/user/img/avatar/50/24.jpg" alt="">
+							<div class="content-box">
+								<h4 class="overflow-ellipsis">盘丝瑶瑶</h4>
+								<p class="comment-time">2018年05月10日</p>
+								<p class="comment-content">我决定从第一集再好好看一遍求点赞看主页pk赛车飙车</p>
+							</div>
+						</li>
+					</ul>
+				</div>
+			</div>
+			<!-- 选集模态框 -->
+			<div class="z-modal hidden">
+				<div class="modal-content">
+					<div class="modal-content-header">
+						<h2><a href="javascript:;" data-target="modal-episodes" class="choice selected">选集</a><a href="javascript:;" class="abstract" data-target="modal-abstract">分集剧情</a></h2>
+						<a href="javascript:;" class="model-close">关闭</a>
+					</div>
+					<div class="modal-list">
+						<ul class="modal-episodes">
+							<li>1</li>
+							<li>2</li>
+							<li>3</li>
+							<li>4</li>
+							<li>5</li>
+							<li>1</li>
+							<li>2</li>
+							<li>3</li>
+							<li>4</li>
+							<li>5</li>
+							<li>1</li>
+							<li>2</li>
+							<li>3</li>
+							<li>4</li>
+							<li>5</li>
+							<li>1</li>
+							<li>2</li>
+							<li>3</li>
+							<li>4</li>
+							<li>5</li>
+							<li>5</li>
+							<li>1</li>
+							<li>2</li>
+							<li>3</li>
+							<li>4</li>
+							<li>5</li>
+							<li>1</li>
+							<li>2</li>
+							<li>3</li>
+							<li>4</li>
+							<li>5</li>
+							<li>5</li>
+							<li>1</li>
+							<li>2</li>
+							<li>3</li>
+							<li>4</li>
+							<li>5</li>
+							<li>1</li>
+							<li>2</li>
+							<li>3</li>
+							<li>4</li>
+							<li>5</li>
+							<li>4</li>
+							<li>5</li>
+							<li>1</li>
+							<li>2</li>
+							<li>3</li>
+							<li>4</li>
+							<li>5</li>
+							<li>1</li>
+							<li>2</li>
+							<li>3</li>
+							<li>4</li>
+							<li>5</li>
+							<li>1</li>
+							<li>2</li>
+							<li>3</li>
+							<li>4</li>
+							<li>5</li>
+							<li>4</li>
+							<li>5</li>
+							<li>1</li>
+							<li>2</li>
+							<li>3</li>
+							<li>4</li>
+							<li>5</li>
+						</ul>
+						<ul class="modal-abstract hidden">
+							<li>
+								<h3>第001话 漩涡鸣人登场！</h3>
+								<p>林动是林氏宗族林啸的儿子，因林啸病重，林动专门出来打拳为父亲筹钱买药。不料林动在竞技场连续赢得比赛，引起了雷家二少爷雷厉的关注。远古时期被符祖封印的异魔冲破封印，遍寻散落世间的祖符，想要重启位面之门。为了阻止异魔，道宗宗主应玹子、九天太清宫宫主沈清和元门执事长老穆芊芊齐聚商议对策。绫清竹擅自前往青阳镇除魔，应欢欢得知后也追随前往。林动得罪雷家的事被家族得知，族长林穆严厉斥责了他，但林动坚决不认错。</p>
+							</li>
+							<li>
+								<h3>第001话 漩涡鸣人登场！</h3>
+								<p>林动是林氏宗族林啸的儿子，因林啸病重，林动专门出来打拳为父亲筹钱买药。不料林动在竞技场连续赢得比赛，引起了雷家二少爷雷厉的关注。远古时期被符祖封印的异魔冲破封印，遍寻散落世间的祖符，想要重启位面之门。为了阻止异魔，道宗宗主应玹子、九天太清宫宫主沈清和元门执事长老穆芊芊齐聚商议对策。绫清竹擅自前往青阳镇除魔，应欢欢得知后也追随前往。林动得罪雷家的事被家族得知，族长林穆严厉斥责了他，但林动坚决不认错。</p>
+							</li>
+							<li>
+								<h3>第001话 漩涡鸣人登场！</h3>
+								<p>林动是林氏宗族林啸的儿子，因林啸病重，林动专门出来打拳为父亲筹钱买药。不料林动在竞技场连续赢得比赛，引起了雷家二少爷雷厉的关注。远古时期被符祖封印的异魔冲破封印，遍寻散落世间的祖符，想要重启位面之门。为了阻止异魔，道宗宗主应玹子、九天太清宫宫主沈清和元门执事长老穆芊芊齐聚商议对策。绫清竹擅自前往青阳镇除魔，应欢欢得知后也追随前往。林动得罪雷家的事被家族得知，族长林穆严厉斥责了他，但林动坚决不认错。</p>
+							</li>
+						</ul>
+					</div>
+				</div>
 			</div>
 		</section>
 	</div>
@@ -124,7 +281,7 @@
 <script id="movie_list" type="text/html">
 	{{each data as item}}
 		<li>
-		    <a href="javascript:;" data-link={{item.indexurl.substr(item.indexurl.indexOf("id_") + 3)}}>
+		    <a href="javascript:;" data-sid="{{item.indexurl.substr(item.indexurl.indexOf("id_") + 3)}}" data-vlink="{{item.homepageurl}}">
 				<img src={{item.avatar}} alt="{{item.title}}">
 				<h2 class="overflow-ellipsis">{{item.title}}</h2>
 			</a>
@@ -139,7 +296,7 @@
 </script>
 <script id="search_data" type="text/html">
 		{{if res.hi}}
-			<li class="video" data-link="{{res.si}}">
+			<li class="video" data-vlink="{{res.u}}" data-sid="{{res.si}}">
 			<img src="{{res.hi}}" alt="{{res.n}}">
 			<div class="video-intro">
 				<h2 class="overflow-ellipsis">{{res.n}}</h2>
@@ -147,10 +304,10 @@
 				<p class="episodes">
 					{{each res.e as epi i}}
 						{{if i<2}}
-							<a href="javascript:;" data-link="epi.u" class="overflow-ellipsis">{{epi.s}}</a>
+							<a href="javascript:;" data-sid="{{res.si}}" data-vlink="{{epi.u}}">{{epi.s}}</a>
 						{{/if}}
 					{{/each}}
-						<a href="javascript:;" data-link="{{res.si}}" class="overflow-ellipsis">
+						<a href="javascript:;" data-sid="{{res.si}}">
 							{{if res.e}}
 								...
 							{{else}}
@@ -159,7 +316,7 @@
 						</a>
 					{{each res.e as epi j}}
 						{{if j>1}}
-							<a href="javascript:;" data-link="epi.u">{{epi.s}}</a>
+							<a href="javascript:;"  data-sid="{{res.si}}" data-vlink="{{epi.u}}">{{epi.s}}</a>
 						{{/if}}
 					{{/each}}
 				</p>
@@ -169,6 +326,9 @@
 		{{else}}
 			<li class="tip">{{res}}</li>
 		{{/if}}
+</script>
+<script id="episodes_data" type="text/html">
+	{{html}}
 </script>
 <script src="scripts/index.js"></script>
 </html>
